[package]
name = "uniswap-v3-sdk"
version = "0.29.2"
edition = "2021"
authors = ["Shuhui Luo <twitter.com/aureliano_law>"]
description = "Uniswap V3 SDK for Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/shuhuiluo/uniswap-v3-sdk-rs"
keywords = ["uniswap-v3", "ethereum", "sdk"]
exclude = [".github", ".gitignore", "rustfmt.toml"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
alloy-primitives = "0.7"
alloy-sol-types = "0.7"
anyhow = "1.0"
aperture-lens = { version = "0.4", optional = true }
base64 = { version = "0.22", optional = true }
bigdecimal = "0.4.2"
ethers = { version = "2.0", optional = true }
ethers-core = "2.0"
num-bigint = "0.4.4"
num-integer = "0.1.45"
num-traits = "0.2.17"
once_cell = "1.19"
regex = { version = "1.10", optional = true }
ruint = "1.12"
serde_json = { version = "1.0", optional = true }
thiserror = "1.0"
uniswap-sdk-core = "0.21.0"
uniswap_v3_math = "0.4"
cosmwasm-schema = "1.5.0"
cosmwasm-std = { version = "1.5.0"}
cw-storage-plus = "1.1.0"
cw2 = "1.1.1"
cw20 = "1.1.1"
cw-utils = "1.0.3"
schemars = "0.8.16"
serde = { version = "1.0.189", default-features = false, features = ["derive"] }
bigint = "4.4.3"
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "cd5e0f7", features = [
    "contract",
    "providers",
] }
eyre = "0.6.12"

[features]
extensions = ["aperture-lens", "base64", "ethers", "regex", "serde_json"]

[dev-dependencies]
criterion = "0.5.1"
ethers = "2.0"
tokio = { version = "1.37", features = ["full"] }

[[bench]]
name = "bit_math"
harness = false

[[bench]]
name = "sqrt_price_math"
harness = false

[[bench]]
name = "swap_math"
harness = false

[[bench]]
name = "tick_math"
harness = false
